--- a/test1.html/test.html
+++ b/test1.html/test.html
@@ -24,8 +24,8 @@
             <img width="200px" height="300px"src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmy.alfred.edu%2Fzoom%2F_images%2Ffoster-lake.jpg&f=1&nofb=1&ipt=ef093221eb850c92f8368e8836a39f0c1fefbf0e7421c6881037d9eb39f78418&ipo=images"alt="senary"/>  
             <img width="200px" height="300px"src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmy.alfred.edu%2Fzoom%2F_images%2Ffoster-lake.jpg&f=1&nofb=1&ipt=ef093221eb850c92f8368e8836a39f0c1fefbf0e7421c6881037d9eb39f78418&ipo=images"alt="senary"/>  
             <a href="https://loremipsum.io/"target="_blank">Lorem website</a>
-            <a href="./notes"target="_blank">Notes</a>
-            <a href="./notes" download="">Download Notes</a>
+            <a href="./Notes.txt"target="_blank">Notes</a>
+            <a href="./Notes.txt" download="">Download Notes</a>
         </center>
     </div>
 
